update to fix wrapping in IE11
Former-commit-id: 0ef9e740d340bbbebfd313c2fb2936f3a07191b8

--- a/byu-hero-banner/byu-hero-banner.scss
+++ b/byu-hero-banner/byu-hero-banner.scss
@@ -446,6 +446,7 @@
         .read-more-link {
             margin-top: 20px;
             align-self: center;
+            width: 100%;
 
             ::slotted(a), ::slotted(.btn) {
                 background-color: $navy !important;
